--- a/src/app/(WithHeaderAndFooter)/About/About.module.scss
+++ b/src/app/(WithHeaderAndFooter)/About/About.module.scss
@@ -85,16 +85,239 @@
             margin-bottom: 0;
         }
 
-        .slide {
+        .swiper {
             margin-top: 30px;
+
+            .slide {
+                border: 1px solid #ccc;
+                padding: 10px;
+
+                .image {
+                    width: 100%;
+                    height: 75px;
+                    position: relative;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+            }
+
+        }
+    }
+
+    .generate {
+        padding-top: 80px;
+
+        .heading {
+            font-size: 40px;
+            font-weight: 700;
+            color: #1C1645;
+            margin-bottom: 10px;
+        }
+
+        .para {
+            font-size: 20px;
+            font-weight: 400;
+            color: #666;
+            text-align: center;
+        }
+
+        .border {
+            border-right: 1px solid #ccc;
+
+            .number {
+                font-size: 40px;
+                font-weight: 800;
+                color: #0083ff;
+                margin-bottom: 10px;
+                text-align: center;
+            }
+
+            .desc {
+                font-size: 18px;
+                font-weight: 700;
+                color: #666;
+                margin-bottom: 0;
+                text-align: center;
+            }
+        }
+
+        .border:last-child {
+            border-right: 0 !important;
+        }
+    }
+
+    .vision_sec {
+        margin-top: 80px;
+        padding: 50px 0px;
+        background-image: linear-gradient(#2b3448, #1f283e);
+
+        .heading {
+            font-size: 40px;
+            font-weight: 700;
+            color: #fff;
+            margin-bottom: 10px;
+            text-align: center;
+        }
+
+        .card {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            background-color: rgb(255, 255, 255, .1);
+            padding: 30px;
+            margin-bottom: 30px;
+
             .image {
-                width: 100%;
-                height: 130px;
+                width: 60px;
+                height: 60px;
                 position: relative;
 
                 img {
                     width: 100%;
                     height: 100%;
+                }
+            }
+
+            .content {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                flex: 4;
+
+                .heading {
+                    font-size: 24px;
+                    font-weight: 700;
+                    color: #fff;
+                    margin-bottom: 10px;
+                }
+
+                .para {
+                    font-size: 18px;
+                    font-weight: 300;
+                    color: rgb(255, 255, 255, .4);
+                    margin-bottom: 0;
+                }
+            }
+        }
+
+
+    }
+
+    .recent_work {
+        padding-top: 80px;
+
+        .heading {
+            font-size: 40px;
+            font-weight: 700;
+            color: #1C1645;
+            margin-bottom: 10px;
+            text-align: center;
+        }
+
+        .para {
+            font-size: 20px;
+            font-weight: 400;
+            color: #666;
+            text-align: center;
+        }
+
+        .swiper1 {
+            overflow: hidden;
+            margin: 0 80px;
+            padding-top: 40px;
+
+            .work_card {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                border: 1px solid #ccc;
+                border-radius: 8px;
+                overflow: hidden;
+
+                .main_content {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    padding: 0px 25px;
+
+                    .top_sec {
+                        display: flex;
+                        flex-direction: row;
+                        align-items: center;
+                        gap: 10px;
+                        padding-bottom: 26px;
+                        padding-top: 15px;
+
+                        .images {
+                            width: 80px;
+                            height: 80px;
+                            position: relative;
+
+                            img {
+                                width: 100%;
+                                height: 100%;
+                            }
+                        }
+
+                        .head1 {
+                            font-size: 24px;
+                            font-weight: 800;
+                            color: #1C1645;
+                            margin-bottom: 0;
+                        }
+                    }
+
+                    .work_img {
+                        width: 100%;
+                        height: 300px;
+                        position: relative;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                        align-items: center;
+
+                        img {
+                            width: 100%;
+                            height: 100%;
+                        }
+                    }
+                }
+
+                .info {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    padding: 10px 0px;
+                    background-color: #f4f4f4;
+                    position: relative;
+
+                    .para {
+                        font-size: 18px;
+                        font-weight: 400;
+                        color: #666;
+                        margin-bottom: 0;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 2;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                    }
+
+                    .btn2:global(.btn) {
+                        background-color: transparent;
+                        border: none;
+                        color: #0083ff;
+                        font-size: 18px;
+                        font-weight: 600;
+                        border-radius: 0;
+                    }
                 }
             }
         }
