--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,3 +53,30 @@
   top: 50% !important;
   right: 5% !important;
 }
+
+
+/* About */
+
+.myswiper2 .swiper-button-prev {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #1c1645;
+}
+
+.myswiper2 .swiper-button-prev:after {
+  font-size: 20px !important;
+  color: #fff !important;
+}
+
+.myswiper2 .swiper-button-next:after {
+  font-size: 20px !important;
+  color: #fff !important;
+}
+
+.myswiper2 .swiper-button-next {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #1c1645;
+}
