--- a/src/app/(WithHeaderAndFooter)/About/About.module.scss
+++ b/src/app/(WithHeaderAndFooter)/About/About.module.scss
@@ -20,8 +20,8 @@
             height: 100%;
             top: 0;
             left: 0;
-            background-image: linear-gradient(90deg, #000102 0, #472918 100%);
-            background-image: -webkit-linear-gradient(90deg, #000102 0, #472918 100%);
+            background-image: -webkit-linear-gradient(90deg, #1b1a1a 0, #2e2e2e 100%);
+            background-image: linear-gradient(90deg, #1b1a1a 0, #2e2e2e 100%);
             opacity: .8;
             z-index: 1;
         }
@@ -321,5 +321,94 @@
                 }
             }
         }
+    }
+
+    .our_client {
+        padding: 40px 0px;
+        position: relative;
+        margin-top: 80px;
+
+        .contents {
+            position: relative;
+            z-index: 2;
+
+            .head {
+                font-size: 40px;
+                font-weight: 700;
+                color: #fff;
+                margin-bottom: 10px;
+            }
+
+            .para {
+                font-size: 20px;
+                font-weight: 400;
+                color: #666;
+            }
+
+        }
+
+        .myswiper {
+            padding-top: 6%;
+            padding-bottom: 1%;
+
+            .slide {
+                padding: 30px 20px 20px 20px;
+                border-radius: 20px;
+                background-color: #fff;
+                box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -4px rgba(0, 0, 0, 0.1);
+                min-height: 330px;
+                position: relative;
+
+                .image {
+                    width: 40px;
+                    height: 40px;
+                    position: relative;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+
+                .card_head {
+                    font-size: 16px;
+                    font-weight: 400;
+                    color: #666;
+                }
+
+                .name {
+                    font-size: 20px;
+                    font-weight: 600;
+                    color: #1C1645;
+                    margin-top: 6%;
+                }
+            }
+
+
+        }
+    }
+
+    .our_client::before {
+        content: '';
+        position: absolute;
+        width: 45%;
+        height: 100%;
+        background-color: #1C1645;
+        top: 0;
+        left: 0;
+        z-index: 1;
+    }
+
+    .our_client::after {
+        content: '';
+        position: absolute;
+        width: 55%;
+        height: 100%;
+        background-image: url('/pattern.webp');
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        top: 0;
+        right: 0;
+        z-index: 1;
     }
 }
