--- a/src/app/(WithHeaderAndFooter)/Contact/Contact.module.scss
+++ b/src/app/(WithHeaderAndFooter)/Contact/Contact.module.scss
@@ -20,7 +20,7 @@
             height: 100%;
             top: 0;
             left: 0;
-            background-color: rgb(0 0 0 / 40%);
+            background-color: rgb(0 0 0 / 52%);
             z-index: 1;
         }
 
@@ -59,24 +59,21 @@
             .title {
                 font-size: 16px;
                 font-weight: 600;
-                font-family: var(--playfair);
-                color: #516b6a;
+                color:#737373 ;
             }
     
             .head {
-                font-size: 30px;
-                font-weight: 500;
-                font-family: var(--playfair);
-                color: #000;
+                font-size: 40px;
+                font-weight: 700;
+                color: #1C1645;
                 margin-bottom: 12px;
             }
         }
     
         .desc {
-            font-size: 16px;
-            font-weight: 500;
-            font-family: var(--lato);
-            color: #737373;
+            font-size: 18px;
+            font-weight: 400;
+            color: #666;
             margin-bottom: 50px;
         }
     
@@ -91,13 +88,12 @@
     
                 svg {
                     font-size: 50px;
-                    color: #516b6a;
+                    color: #1C1645;
                 }
     
                 .name {
                     font-size: 22px;
                     font-weight: 600;
-                    font-family: var(--lato);
                     color: #1A1A1A;
                     margin-bottom: 0;
                 }
@@ -105,18 +101,15 @@
                 .para {
                     font-size: 20px;
                     font-weight: 500;
-                    font-family: var(--lato);
                     color: #737373;
                     margin-bottom: 0;
                     text-align: center;
-                    height: 60px;
                 }
     
                 .link {
                     font-size: 20px;
                     font-weight: 500;
-                    font-family: var(--lato);
-                    color: #516b6a;
+                    color: #666;
                 }
             }
         }
@@ -161,17 +154,15 @@
                     .title {
                         font-size: 30px;
                         font-weight: 600;
-                        font-family: var(--playfair);
-                        color: #1A1A1A;
+                        color: #1C1645;
                         margin-bottom: 18px;
-                        border-left: 2px solid #516b6a;
+                        border-left: 2px solid #1C1645;
                         padding: 5px 0px 5px 10px;
                     }
     
                     .para {
                         font-size: 16px;
                         font-weight: 400;
-                        font-family: var(--lato);
                         color: #737373;
                         margin-bottom: 0
                     }
@@ -192,7 +183,6 @@
             .label {
                 font-size: 18px;
                 font-weight: 500;
-                font-family: var(--lato);
                 color: #000;
                 margin-bottom: 3px;
             }
@@ -207,7 +197,6 @@
                     padding-bottom: 10px;
                     font-size: 16px;
                     font-weight: 400;
-                    font-family: var(--lato);
                     color: #959595;
                     resize: none;
                     position: relative;
@@ -227,13 +216,12 @@
             }
     
             .btn4:global(.btn) {
-                background-color: #516b6a;
-                border-color: #516b6a;
+                background-color: #1C1645;
+                border-color: #1C1645;
                 border-radius: 2px;
                 margin-top: 40px;
                 font-size: 20px;
                 font-weight: 500;
-                font-family: var(--lato);
                 color: #fff;
                 padding: 15px 50px;
             }
