--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,3 +80,34 @@
   border-radius: 50%;
   background-color: #1c1645;
 }
+
+
+
+.myswiper3 .swiper-button-prev {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #1c1645;
+  left: unset !important;
+  top: 7% !important;
+  right: 10% !important;
+}
+
+.myswiper3 .swiper-button-prev:after {
+  font-size: 20px !important;
+  color: #fff !important;
+}
+
+.myswiper3 .swiper-button-next:after {
+  font-size: 20px !important;
+  color: #fff !important;
+}
+
+.myswiper3 .swiper-button-next {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #1c1645;
+  top:7% !important;
+  right: 5% !important;
+}
