--- a/src/components/EnquiryForm/EnquiryForm.module.scss
+++ b/src/components/EnquiryForm/EnquiryForm.module.scss
@@ -1,8 +1,8 @@
 .form {
-    
     position: relative;
     margin-top: 80px;
-    padding-top: 40px;
+    padding: 40px 0px;
+    background-color: #efefef;
 
 
     .content {
@@ -14,57 +14,60 @@
         }
 
         .para {
-            font-size:22px;
+            font-size: 22px;
             font-weight: 500;
             color: #666;
             margin-bottom: 0;
         }
 
-        .image {
-            width: 100%;
-            height: 500px;
+        .inputs {
+            background-color: #f9fafb;
+            border-radius: 8px;
+            padding: 20px;
             position: relative;
-            animation: bounce 2s infinite;
+            z-index: 3;
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+            margin-top: 20px;
 
-            img {
+            .control:global(.form-control) {
+                background-color: transparent;
+                border-color: #ccc;
+                padding: 14px 10px;
+                font-size: 16px;
+                font-weight: 400;
+                color: #737373;
+            }
+
+            .control:global(.form-control:focus) {
+                box-shadow: none;
+            }
+
+            .btn2:global(.btn) {
+                background-color: #1C1645;
+                border-color: #1C1645;
+                font-size: 18px;
+                font-weight: 700;
+                color: #fff;
+                border-radius: 4px;
                 width: 100%;
-                height: 100%;
+                padding: 12px 10px;
             }
         }
     }
 
-    .inputs {
-        background-color: #f9fafb;
-        border-radius: 8px;
-        padding: 20px;
+    .image {
+        width: 100%;
+        height: 600px;
         position: relative;
-        z-index: 3;
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        animation: bounce 2s infinite;
 
-        .control:global(.form-control) {
-            background-color: transparent;
-            border-color: #ccc;
-            padding: 14px 10px;
-            font-size: 16px;
-            font-weight: 400;
-            color: #737373;
-        }
-
-        .control:global(.form-control:focus) {
-            box-shadow: none;
-        }
-
-        .btn2:global(.btn) {
-            background-color: #1C1645;
-            border-color: #1C1645;
-            font-size: 18px;
-            font-weight: 700;
-            color: #fff;
-            border-radius: 4px;
+        img {
             width: 100%;
-            padding: 12px 10px;
+            height: 100%;
         }
     }
+
+
 }
 
 .form::before {
@@ -80,7 +83,20 @@
 }
 
 @keyframes bounce {
-	0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
-	40% {transform: translateY(-30px);}
-	60% {transform: translateY(-15px);}
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
+    }
+
+    40% {
+        transform: translateY(-30px);
+    }
+
+    60% {
+        transform: translateY(-15px);
+    }
 }
