--- a/src/app/(WithHeaderAndFooter)/About/About.module.scss
+++ b/src/app/(WithHeaderAndFooter)/About/About.module.scss
@@ -39,6 +39,7 @@
                 font-weight: 700;
                 color: #fff;
                 margin-bottom: 10px;
+                text-transform: uppercase;
             }
 
             .para {
@@ -74,7 +75,7 @@
             font-weight: 400;
             color: #666;
             text-align: center;
-            margin-bottom: 30px;
+            // margin-bottom: 30px;
         }
 
         .title {
@@ -108,7 +109,7 @@
     }
 
     .generate {
-        padding-top: 80px;
+        padding-top: 60px;
 
         .heading {
             font-size: 40px;
