--- a/src/components/HomePageComponents/AboutCompany/AboutCompany.module.scss
+++ b/src/components/HomePageComponents/AboutCompany/AboutCompany.module.scss
@@ -1,5 +1,6 @@
 .about_sec {
-    padding: 50px 0px;
+    padding: 70px 0px;
+    position: relative;
 
     .heading {
         font-size: 40px;
@@ -21,21 +22,105 @@
         margin-bottom: 25px;
     }
 
+    .swiper {
+        border-top: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
 
-    .slide {
-        border: 2px dashed #ccc;
-        padding: 20px 0px;
+        .slide {
+            padding: 40px 20px 40px 0px;
+            border-right: 1px solid #ccc;
 
-        .image {
-            width: 150px;
-            height: 35px;
-            position: relative;
-            margin: 0 auto;
+            .image {
+                width: 150px;
+                height: 35px;
+                position: relative;
+                margin: 0 auto;
 
-            img {
-                width: 100%;
-                height: 100%;
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
             }
         }
     }
+
+    .nav:global(.nav) {
+        background-color: #1C1645;
+        padding: 2pc;
+        align-items: flex-start;
+        position: relative;
+        z-index: 2;
+
+        .nav_link:global(.nav-link.active) {
+            width: 100%;
+            background-color: #fff;
+            border-radius: 0;
+            padding: 15px 2pc;
+            margin-right: -3pc;
+            color: #1C1645;
+            text-align: left;
+            font-size: 18px;
+            font-weight: 600;
+        }
+
+        .nav_link:global(.nav-link) {
+            font-size: 18px;
+            font-weight: 400;
+            color: #fff;
+            padding: 15px 2pc;
+        }
+    }
+
+    .tab_pane:global(.tab-pane) {
+        position: relative;
+        z-index: 2;
+
+        .heading {
+            font-size: 34px;
+            font-weight: 700;
+            color: #1C1645;
+            margin-bottom: 20px;
+        }
+
+        .para {
+            font-size: 18px;
+            font-weight: 400;
+            color: #797979;
+            margin-bottom: 15px;
+        }
+
+        .head {
+            font-size: 19px;
+            font-weight: 500;
+            color: #1C1645;
+            margin-bottom: 10px;
+        }
+
+        .list {
+            margin: 0;
+            list-style: disc;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            .item {
+                font-size: 18px;
+                font-weight: 400;
+                color: #797979;
+            }
+        }
+    }
+}
+
+.about_sec::before {
+    content: '';
+    background-image: url('/home_bg.png');
+    position: absolute;
+    top: 33%;
+    left: 0;
+    background-size: 100% 100%;
+    width: 100%;
+    height: 500px;
+    opacity: 0.07;
+    z-index: 1;
 }
