--- a/src/app/(WithHeaderAndFooter)/Contact/Contact.module.scss
+++ b/src/app/(WithHeaderAndFooter)/Contact/Contact.module.scss
@@ -65,7 +65,7 @@
             .head {
                 font-size: 40px;
                 font-weight: 700;
-                color: #1C1645;
+                color: #1A1A1A;
                 margin-bottom: 12px;
             }
         }
@@ -88,7 +88,7 @@
     
                 svg {
                     font-size: 50px;
-                    color: #1C1645;
+                    color: #2E5490;
                 }
     
                 .name {
@@ -216,8 +216,8 @@
             }
     
             .btn4:global(.btn) {
-                background-color: #1C1645;
-                border-color: #1C1645;
+                background-color: #2E5490;
+                border-color: #2E5490;
                 border-radius: 2px;
                 margin-top: 40px;
                 font-size: 20px;
