--- a/src/app/(WithHeaderAndFooter)/faqs/faqs.module.scss
+++ b/src/app/(WithHeaderAndFooter)/faqs/faqs.module.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     height: 350px;
     position: relative;
-    background-color: #2a3347e3;
+    background-color: #2e5490e3;
 
     .heading {
         font-size: 40px;
@@ -41,13 +41,13 @@
             padding: 15px 24px;
             font-size: 18px;
             font-weight: 400;
-            color: #2a3347;
+            color: #1a1a1a;
             cursor: pointer;
         }
 
         .active {
-            border-bottom: 1px solid #2a3347;
-            background-color: #2a3347;
+            border-bottom: 1px solid #2E5490;
+            background-color: #2E5490;
             padding: 15px 24px;
             font-size: 18px;
             font-weight: 500;
@@ -73,7 +73,7 @@
                     box-shadow: none !important;
                     font-size: 18px !important;
                     font-weight: 500 !important;
-                    color: #2a3347 !important;
+                    color: #1a1a1a !important;
                     border: 0 !important;
                     padding: 18px 0px !important;
                 }
@@ -83,7 +83,7 @@
                     box-shadow: none !important;
                     font-size: 18px !important;
                     font-weight: 500 !important;
-                    color: #2a3347 !important;
+                    color: #1a1a1a !important;
                     border-bottom: none !important;
                     border-radius: 0 !important;
                     padding: 18px 0px !important;
