--- a/src/components/EnquiryForm/EnquiryForm.module.scss
+++ b/src/components/EnquiryForm/EnquiryForm.module.scss
@@ -9,7 +9,7 @@
         .heading {
             font-size: 40px;
             font-weight: 700;
-            color: #1C1645;
+            color: #1a1a1a;
             margin-bottom: 10px;
         }
 
@@ -43,8 +43,8 @@
             }
 
             .btn2:global(.btn) {
-                background-color: #1C1645;
-                border-color: #1C1645;
+                background-color: #2e5490;             
+                border-color: #2e5490;            
                 font-size: 18px;
                 font-weight: 700;
                 color: #fff;
