--- a/src/app/(WithHeaderAndFooter)/About/About.module.scss
+++ b/src/app/(WithHeaderAndFooter)/About/About.module.scss
@@ -56,7 +56,7 @@
         .heading {
             font-size: 40px;
             font-weight: 700;
-            color: #1C1645;
+            color: #1a1a1a;
             text-align: center;
             text-transform: capitalize;
             margin-bottom: 0;
@@ -114,7 +114,7 @@
         .heading {
             font-size: 40px;
             font-weight: 700;
-            color: #1C1645;
+            color: #1a1a1a;
             margin-bottom: 10px;
         }
 
@@ -131,7 +131,7 @@
             .number {
                 font-size: 40px;
                 font-weight: 800;
-                color: #0083ff;
+                color: #2e5490;
                 margin-bottom: 10px;
                 text-align: center;
             }
@@ -151,14 +151,13 @@
     }
 
     .vision_sec {
-        margin-top: 80px;
-        padding: 50px 0px;
-        background-image: linear-gradient(#2b3448, #1f283e);
+        padding: 70px 0px;
+        // background-image: linear-gradient(#2E5490, #2E5490);
 
         .heading {
             font-size: 40px;
             font-weight: 700;
-            color: #fff;
+            color: #1A1A1A;
             margin-bottom: 10px;
             text-align: center;
         }
@@ -169,7 +168,7 @@
             align-items: center;
             flex-wrap: wrap;
             gap: 20px;
-            background-color: rgb(255, 255, 255, .1);
+            background-color: #2E5490;
             padding: 30px;
             margin-bottom: 30px;
 
@@ -200,7 +199,7 @@
                 .para {
                     font-size: 18px;
                     font-weight: 300;
-                    color: rgb(255, 255, 255, .4);
+                    color: #fff;
                     margin-bottom: 0;
                 }
             }
@@ -210,7 +209,7 @@
     }
 
     .recent_work {
-        padding-top: 80px;
+        padding-top: 70px;
 
         .heading {
             font-size: 40px;
@@ -327,7 +326,6 @@
     .our_client {
         padding: 40px 0px;
         position: relative;
-        margin-top: 80px;
 
         .contents {
             position: relative;
@@ -343,7 +341,7 @@
             .para {
                 font-size: 20px;
                 font-weight: 400;
-                color: #666;
+                color: #fff;
             }
 
         }
@@ -380,7 +378,7 @@
                 .name {
                     font-size: 20px;
                     font-weight: 600;
-                    color: #1C1645;
+                    color: #1A1A1A;
                     margin-top: 6%;
                 }
             }
@@ -394,7 +392,7 @@
         position: absolute;
         width: 45%;
         height: 100%;
-        background-color: #1C1645;
+        background-color: #2E5490;
         top: 0;
         left: 0;
         z-index: 1;
