--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -1,4 +1,6 @@
 .banner_sec {
+    position: relative;
+
     .banner {
         width: 100%;
         height: 750px;
@@ -63,17 +65,22 @@
 
     .mobile {
         position: absolute;
-        top: 73%;
-        left: 31%;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        top: 75%;
+        text-align: center;
 
         .image {
             width: 580px;
             height: 450px;
             position: relative;
+            margin: auto;
 
             img {
                 width: 100%;
                 height: 100%;
+                object-fit: contain;
             }
         }
     }
@@ -88,4 +95,17 @@
     z-index: 1;
     width: 100%;
     height: 100%;
+}
+
+
+@media only screen and (min-width:1024px) and (max-width:1200px) {
+
+    .banner_sec {
+        .mobile {
+
+            .image {
+                height: 357px;
+            }
+        }
+    }
 }
