--- a/src/components/HomePageComponents/AboutCompany/AboutCompany.module.scss
+++ b/src/components/HomePageComponents/AboutCompany/AboutCompany.module.scss
@@ -5,7 +5,7 @@
     .heading {
         font-size: 40px;
         font-weight: 600;
-        color: #2a3347;
+        color: #1a1a1a;
     }
 
     .para {
@@ -27,25 +27,26 @@
         border-bottom: 1px solid #ccc;
 
         .slide {
-            padding: 40px 20px 40px 0px;
+            padding: 25px 20px 25px 0px;
             border-right: 1px solid #ccc;
 
             .image {
-                width: 150px;
-                height: 35px;
+                width: 160px;
+                height: 80px;
                 position: relative;
                 margin: 0 auto;
 
                 img {
                     width: 100%;
                     height: 100%;
+                    object-fit: contain;
                 }
             }
         }
     }
 
     .nav:global(.nav) {
-        background-color: #1C1645;
+        background-color: #2e5490;
         padding: 2pc;
         align-items: flex-start;
         position: relative;
@@ -57,15 +58,15 @@
             border-radius: 0;
             padding: 15px 2pc;
             margin-right: -3pc;
-            color: #1C1645;
+            color: #1a1a1a;
             text-align: left;
             font-size: 18px;
-            font-weight: 600;
+            font-weight: 700;
         }
 
         .nav_link:global(.nav-link) {
             font-size: 18px;
-            font-weight: 400;
+            font-weight: 600;
             color: #fff;
             padding: 15px 2pc;
         }
@@ -78,7 +79,7 @@
         .heading {
             font-size: 34px;
             font-weight: 700;
-            color: #1C1645;
+            color: #1a1a1a;
             margin-bottom: 20px;
         }
 
@@ -92,7 +93,7 @@
         .head {
             font-size: 19px;
             font-weight: 500;
-            color: #1C1645;
+            color: #1a1a1a;
             margin-bottom: 10px;
         }
 
