--- a/src/components/HomePageComponents/ChooseUs/ChooseUs.module.scss
+++ b/src/components/HomePageComponents/ChooseUs/ChooseUs.module.scss
@@ -4,14 +4,14 @@
     .span {
         font-size: 16px;
         font-weight: 600;
-        color: #07b0ed;
-        border-bottom: 2px solid #07b0ed;
+        color: #2E5490;
+        border-bottom: 2px solid #2E5490;
     }
 
     .heading {
         font-size: 40px;
         font-weight: 600;
-        color: #2a3347;
+        color: #1a1a1a;
         margin-top: 10px;
     }
 
@@ -25,7 +25,7 @@
     .head {
         font-size: 18px;
         font-weight: 500;
-        color: #2a3347;
+        color: #1a1a1a;
         border: 2px dashed #c5c5c5;
         border-radius: 10px;
         padding: 20px 15px;
