--- a/src/components/HomePageComponents/HomeBanner/HomeBanner.module.scss
+++ b/src/components/HomePageComponents/HomeBanner/HomeBanner.module.scss
@@ -39,8 +39,8 @@
             align-items: center;
 
             .btn1:global(.btn) {
-                background-color: #1C1645;
-                border-color: #1C1645;
+                background-color: #2E5490;
+                border-color: #2E5490;
                 border-radius: 30px;
                 font-size: 18px;
                 font-weight: 600;
