--- a/src/components/HomePageComponents/Solutions/Solutions.module.scss
+++ b/src/components/HomePageComponents/Solutions/Solutions.module.scss
@@ -6,7 +6,7 @@
     .heading {
         font-size: 40px;
         font-weight: 600;
-        color: #2a3347;
+        color: #1a1a1a;
     }
 
     .para {
@@ -38,7 +38,7 @@
                 width: 65px;
                 height: 65px;
                 border-radius: 50%;
-                background-color: #07b0ed;
+                background-color: #2E5490;
 
                 .image {
                     width: 40px;
@@ -56,14 +56,14 @@
             .title {
                 font-size: 20px;
                 font-weight: 700;
-                color: #2a3347;
+                color: #1a1a1a;
                 margin-bottom: 0;
                 text-align: center;
             }
         }
 
         .content:hover {
-            background-color: #2a3347;
+            background-color: #2E5490;
 
             .bg_color {
                 background-color: transparent;
