--- a/src/components/HomePageComponents/WorkFlow/WorkFlow.module.scss
+++ b/src/components/HomePageComponents/WorkFlow/WorkFlow.module.scss
@@ -1,12 +1,10 @@
 .workflow {
-    padding: 70px 0px 70px 0px;
-    background-color: #2a3347;
     position: relative;
 
     .heading {
         font-size: 40px;
         font-weight: 600;
-        color: #fff;
+        color: #1a1a1a;
         margin-bottom: 40px;
     }
 
@@ -14,6 +12,7 @@
         background-color: #fff;
         padding: 60px 30px;
         box-shadow: 0px 0px 38px 0px rgba(0, 0, 0, .08);
+        border: 1px solid #ccc;
         position: relative;
 
         .first_sec {
@@ -26,8 +25,8 @@
             .number {
                 font-size: 50px;
                 font-weight: 600;
-                text-shadow: -5px 5px 0px rgb(7 176 237 / 31%);
-                color: #07b0ed;
+                text-shadow: -5px 5px 0px #2e54906e;
+                color: #2E5490;
             }
 
             .icon {
@@ -45,7 +44,7 @@
         .head {
             font-size: 18px;
             font-weight: 600;
-            color: #2a3347;
+            color: #1a1a1a;
         }
 
         .para {
@@ -62,7 +61,7 @@
         content: "";
         height: 4px;
         width: 0;
-        background: linear-gradient(90deg, #07b0ed 0%, #07b0ed 56%);
+        background: linear-gradient(90deg, #2E5490 0%, #2E5490 56%);
         transition: all 0.35s ease-in-out;
     }
 
