--- a/src/layout/layout.module.scss
+++ b/src/layout/layout.module.scss
@@ -40,8 +40,8 @@
 
         .logo {
             position: relative;
-            width: 180px;
-            height: 52px;
+            width: 65px;
+            height: 65px;
             margin-right: 0 !important;
 
             img {
@@ -98,8 +98,8 @@
         }
 
         .btn1:global(.btn){
-            background-color: #1C1645;
-            border-color: #1C1645;
+            background-color: #2E5490;
+            border-color: #2E5490;
             border-radius: 35px;
             font-size: 18px;
             font-weight: 500;
@@ -121,7 +121,7 @@
 
 // FOOTER
 .Footer {
-    background-color: #2a3347;
+    background-color: #2E5490;
     padding: 60px 0px 22px 0px;
     position: relative;
 
@@ -131,8 +131,8 @@
         gap: 15px;
 
         .image {
-            width: 230px;
-            height: 70px;
+            width: 215px;
+            height: 75px;
             position: relative;
             margin-bottom: 36px;
 
