--- a/src/components/AppSolution/AppSolution.module.scss
+++ b/src/components/AppSolution/AppSolution.module.scss
@@ -5,7 +5,7 @@
     .heading {
         font-size: 40px;
         font-weight: 800;
-        color: #0c111a;
+        color: #1a1a1a;
         margin-bottom: 15px;
         text-align: center;
     }
@@ -48,7 +48,7 @@
             .heading {
                 font-size: 24px;
                 font-weight: 700;
-                color: #0c111a;
+                color: #2e5490;
                 margin-bottom: 10px;
             }
 
