--- a/src/components/Games/Games.module.scss
+++ b/src/components/Games/Games.module.scss
@@ -4,7 +4,7 @@
     .heading {
         font-size: 40px;
         font-weight: 700;
-        color: #1C1645;
+        color: #1a1a1a;
         margin-bottom: 20px;
         text-align: center;
         text-transform: capitalize;
@@ -43,7 +43,7 @@
         .title {
             font-size: 22px;
             font-weight: 600;
-            color: #1C1645;
+            color: #2e5490;
             margin-bottom: 0;
         }
     }
