--- a/src/components/AppsLoved/AppsLoved.module.scss
+++ b/src/components/AppsLoved/AppsLoved.module.scss
@@ -4,7 +4,7 @@
     .heading {
         font-size: 40px;
         font-weight: 700;
-        color: #1C1645;
+        color: #1a1a1a;
         margin-bottom: 20px;
         text-align: center;
         text-transform: capitalize;
@@ -25,7 +25,7 @@
         .slide {
             .bg_color {
                 position: relative;
-                background-color: #1C1645;
+                background-color: #2e5490;
                 padding: 30px 10px;
 
                 .image {
@@ -87,7 +87,7 @@
                         .head {
                             font-size: 35px;
                             font-weight: 600;
-                            color: #1C1645;
+                            color: #1a1a1a;
                             margin-bottom: 0;
                         }
 
@@ -126,7 +126,7 @@
                             width: 50px;
                             height: 50px;
                             border-radius: 50%;
-                            background-color: #1C1645;
+                            background-color: #2e5490;
                             text-align: center;
 
                             .icon {
@@ -153,7 +153,7 @@
                     border-radius: 8px;
                     font-size: 16px;
                     font-weight: 600;
-                    color: #1C1645;
+                    color: #2e5490;
                     margin-top: 40px;
                     display: flex;
                     flex-direction: row;
@@ -162,7 +162,7 @@
 
                     svg {
                         font-size: 20px;
-                        color: #1C1645;
+                        color: #2e5490;
                     }
                 }
             }
