--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -41,8 +41,8 @@
             justify-content: center;
 
             .btn1:global(.btn) {
-                background-color: #1C1645;
-                border-color: #1C1645;
+                background-color: #2e5490;
+                border-color: #2e5490;
                 border-radius: 30px;
                 font-size: 18px;
                 font-weight: 600;
