--- a/src/components/Featured/Featured.module.scss
+++ b/src/components/Featured/Featured.module.scss
@@ -6,7 +6,7 @@
     .heading {
         font-size: 40px;
         font-weight: 700;
-        color: #1C1645;
+        color: #1a1a1a;
         margin-bottom: 20px;
         text-align: center;
         text-transform: capitalize;
@@ -31,7 +31,7 @@
         :global(.nav-link) {
             font-size: 18px;
             font-weight: 600;
-            color: #1C1645;
+            color: #2e5490;
             border: none;
         }
 
@@ -42,7 +42,7 @@
         :global(.nav-link.active) {
             font-size: 18px;
             font-weight: 600;
-            background-color: #1C1645;
+            background-color: #2e5490;
             color: #fff;
             border-radius: 40px;
         }
@@ -70,7 +70,7 @@
                 width: 60px;
                 height: 60px;
                 border-radius: 50%;
-                background-color: #1C1645;
+                background-color: #2e5490;
                 transition: all .5s;
 
                 .image {
@@ -89,7 +89,7 @@
             .title {
                 font-size: 20px;
                 font-weight: 700;
-                color: #1C1645;
+                color: #1a1a1a;
                 margin-bottom: 0px;
                 text-align: center;
             }
