--- a/src/components/HomePageComponents/AboutCompany/AboutCompany.module.scss
+++ b/src/components/HomePageComponents/AboutCompany/AboutCompany.module.scss
@@ -12,35 +12,76 @@
         font-size: 18px;
         font-weight: 400;
         color: #888686;
-        margin-bottom: 30px;
-    }
-
-    .head {
-        font-size: 20px;
-        font-weight: 600;
-        color: #7a7878;
         margin-bottom: 25px;
     }
 
     .swiper {
-        border-top: 1px solid #ccc;
-        border-bottom: 1px solid #ccc;
-
         .slide {
-            padding: 25px 20px 25px 0px;
-            border-right: 1px solid #ccc;
 
-            .image {
-                width: 160px;
-                height: 80px;
+            // padding: 25px 20px 25px 0px;
+            // border-right: 1px solid #ccc;
+            .main_content {
+                width: 200px;
+                height: 200px;
+                border-radius: 50%;
+                margin: 0px auto;
+                background-color: #fff;
                 position: relative;
-                margin: 0 auto;
+                box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
-                img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: contain;
+                .image {
+                    width: 170px;
+                    height: 80px;
+                    position: relative;
+                    margin: 0 auto;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        margin: 3.75rem auto;
+                        object-fit: contain;
+                    }
                 }
+            }
+
+            .head {
+                font-size: 26px;
+                font-weight: 600;
+                color: #7a7878;
+                margin-top: 20px;
+
+                span {
+                    font-size: 28px;
+                    color: #2e5490;
+                }
+            }
+
+        }
+    }
+
+    .buttons {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+
+        .btn1:global(.btn) {
+            background-color: #2E5490;
+            border-color: #2E5490;
+            border-radius: 30px;
+            font-size: 18px;
+            font-weight: 600;
+            color: #fff;
+            padding: 14px 35px;
+            margin-top: 25px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 20px;
+
+            svg {
+                font-size: 18px;
+                color: #fff;
             }
         }
     }
@@ -56,7 +97,7 @@
             width: 100%;
             background-color: #fff;
             border-radius: 0;
-            padding: 15px 2pc;
+            padding: 15px 1pc;
             margin-right: -3pc;
             color: #1a1a1a;
             text-align: left;
@@ -68,7 +109,7 @@
             font-size: 18px;
             font-weight: 600;
             color: #fff;
-            padding: 15px 2pc;
+            padding: 15px 1pc;
         }
     }
 
