--- a/src/components/HomePageComponents/HomeBanner/HomeBanner.module.scss
+++ b/src/components/HomePageComponents/HomeBanner/HomeBanner.module.scss
@@ -9,6 +9,7 @@
         img {
             width: 100%;
             height: 100%;
+            object-fit: cover;
         }
     }
 
@@ -22,13 +23,15 @@
         z-index: 2;
 
         .heading {
-            font-size: 65px;
+            display: flex;
+            flex-direction: column;
+            font-size: 60px;
             font-weight: 700;
             color: #fff;
         }
 
         .para {
-            font-size: 18px;
+            font-size: 22px;
             font-weight: 400;
             color: #fff;
         }
