--- a/src/components/HomePageComponents/Solutions/Solutions.module.scss
+++ b/src/components/HomePageComponents/Solutions/Solutions.module.scss
@@ -29,7 +29,7 @@
             border: 1px solid rgba(9, 9, 25, 0.10);
             padding: 12px 15px;
             border-radius: 10px;
-            height: 160px;
+            height: 180px;
             transition: all linear .3s;
             box-shadow: 0px 4px 15px 0px rgba(9, 9, 25, 0.10);
 
@@ -54,11 +54,12 @@
             }
 
             .title {
-                font-size: 20px;
+                font-size: 18px;
                 font-weight: 700;
                 color: #1a1a1a;
                 margin-bottom: 0;
                 text-align: center;
+                margin-top: 10px;
             }
         }
 
