--- a/src/layout/layout.module.scss
+++ b/src/layout/layout.module.scss
@@ -1,15 +1,11 @@
 .main_header {
-    padding: 13px 0px;
-    position: absolute;
-    top: 10px;
-    left: 0;
-    top: 0;
-    right: 0;
     z-index: 2;
     transition: .5s;
 
     .top_bar {
-        margin-bottom: 8px;
+        background-color: #2E5490;
+        padding: 10px 0px;
+
         .content {
             display: flex;
             flex-direction: row;
@@ -36,12 +32,13 @@
     }
 
     .header {
-        padding: 0;
+        padding: 20px 0px;
+        background-color: #fff;
 
         .logo {
             position: relative;
-            width: 65px;
-            height: 65px;
+            width: 200px;
+            height: 59px;
             margin-right: 0 !important;
 
             img {
@@ -66,7 +63,7 @@
                     .link {
                         font-size: 20px;
                         font-weight: 600;
-                        color: #fff;
+                        color: #2E5490;
                         padding: 0px 10px;
                     }
                 }
@@ -97,7 +94,7 @@
             }
         }
 
-        .btn1:global(.btn){
+        .btn1:global(.btn) {
             background-color: #2E5490;
             border-color: #2E5490;
             border-radius: 35px;
@@ -110,7 +107,7 @@
             align-items: center;
             gap: 10px;
 
-            svg{
+            svg {
                 font-size: 18px;
                 color: #fff;
             }
