--- a/src/app/(WithHeaderAndFooter)/mlm/mlm.module.scss
+++ b/src/app/(WithHeaderAndFooter)/mlm/mlm.module.scss
@@ -134,6 +134,7 @@
                 font-weight: 400;
                 color: #fff;
                 margin-bottom: 0px;
+                text-align: center;
             }
         }
 
@@ -159,6 +160,7 @@
                 font-weight: 400;
                 color: #2E5490;
                 margin-bottom: 0px;
+                text-align: center;
             }
         }
     }
