--- a/src/app/(WithHeaderAndFooter)/matrimonial/matrimonial.module.scss
+++ b/src/app/(WithHeaderAndFooter)/matrimonial/matrimonial.module.scss
@@ -283,7 +283,7 @@
     border-top: 1px solid #dadada;
     border-bottom: 1px solid #dadada;
     padding: 60px 0px;
-    margin-bottom: 60px;
+    // margin-bottom: 60px;
 
     .form_head {
         font-size: 40px;
