--- a/src/app/(WithHeaderAndFooter)/digitalMarketing/digitalMarketing.module.scss
+++ b/src/app/(WithHeaderAndFooter)/digitalMarketing/digitalMarketing.module.scss
@@ -129,3 +129,97 @@
         border-right: none;
     }
 }
+
+
+.course {
+    padding: 60px 0px;
+
+    .heading {
+        font-size: 40px;
+        font-weight: 600;
+        color: #1a1a1a;
+        margin-bottom: 10px;
+    }
+
+    .para {
+        font-size: 18px;
+        font-weight: 400;
+        color: #666666;
+        margin-bottom: 20px;
+    }
+
+    .list {
+        padding: 0px;
+        margin: 0x;
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+
+        .item {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 15px;
+
+            .icon {
+                width: 20px;
+                height: 20px;
+                position: relative;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+
+            .head {
+                font-size: 16px;
+                font-weight: 500;
+                color: #2E5490;
+                margin-bottom: 0px;
+            }
+        }
+    }
+
+    .image {
+        width: 100%;
+        height: 350px;
+        position: relative;
+
+        img {
+            width: 1005;
+            height: 100%;
+        }
+    }
+}
+
+
+.form {
+    border-top: 1px solid #dadada;
+    border-bottom: 1px solid #dadada;
+    padding: 60px 0px;
+    // margin-bottom: 60px;
+
+    .form_head {
+        font-size: 40px;
+        font-weight: 600;
+        color: #1a1a1a;
+        margin-bottom: 20px;
+    }
+
+    .form_para {
+        font-size: 18px;
+        font-weight: 400;
+        color: #666666;
+        margin-bottom: 40px;
+    }
+
+    .btn1 {
+        background-color: #2E5490;
+        color: #fff;
+        font-size: 18px;
+        font-weight: 600;
+        border: 1px solid #2E5490;
+        padding: 12px 50px;
+    }
+}
