--- a/src/app/(WithHeaderAndFooter)/ecommerce/ecommerce.module.scss
+++ b/src/app/(WithHeaderAndFooter)/ecommerce/ecommerce.module.scss
@@ -174,6 +174,7 @@
 .choose {
     padding: 60px 0px 60px 0px;
     background-color: #f2f2f2;
+    margin-bottom: 60px;
 
     .heading {
         font-size: 40px;
@@ -236,7 +237,7 @@
     border-top: 1px solid #dadada;
     border-bottom: 1px solid #dadada;
     padding: 60px 0px;
-    margin: 60px 0px;
+    // margin: 60px 0px;
 
     .form_head {
         font-size: 40px;
